[package]
name = "highlighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
mlua = { version = "0.8.8", features = ["luajit52"] }
nvim-oxi = { version = "0.2.2", features = ["neovim-0-8", "test", "mlua"] }
